log
Mon 04 Sep 2023 06:39:16 PM UTC: 
 tests:  0|6
total_score: 0/70
036b192
Tue 05 Sep 2023 05:53:46 PM UTC: 
 hashmap.c | 50 +++++++++++++++++---------------------------------
 1 file changed, 17 insertions(+), 33 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:50:14: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   50 |   mapa->size = NULL;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
0f9b66a
Tue 05 Sep 2023 05:54:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6890104
Tue 05 Sep 2023 06:01:14 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:52:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   52 |     mapa->buckets[i] = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
227cbf7
Tue 05 Sep 2023 06:03:04 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:53:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   53 |     mapa->buckets[i] = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1f76d62
Tue 05 Sep 2023 06:07:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2802993
Tue 05 Sep 2023 06:25:34 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
a0b7628
Tue 05 Sep 2023 06:29:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
884c937
Tue 05 Sep 2023 06:35:50 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e9d3fe3
Tue 05 Sep 2023 06:36:28 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
9fd2012
Tue 05 Sep 2023 06:44:47 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
f518082
Tue 05 Sep 2023 06:56:35 PM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
17ab45c
Tue 05 Sep 2023 07:01:15 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
70f045d
Tue 05 Sep 2023 07:04:25 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
adeb550
Tue 05 Sep 2023 07:05:22 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ed331e5
Tue 05 Sep 2023 07:07:36 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:79:9: error: unused variable ‘foundPair’ [-Werror=unused-variable]
   79 |   Pair *foundPair = malloc(sizeof(Pair));
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c19b74e
Tue 05 Sep 2023 07:07:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b42b79
Tue 05 Sep 2023 07:10:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b02de20
Tue 05 Sep 2023 07:14:21 PM UTC: 
 hashmap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  6|4
total_score: 30/70
4dd71db
Tue 05 Sep 2023 07:15:50 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
bdb0549
